feat: 搭建页面框架

--- a/src/layouts/console.css
+++ b/src/layouts/console.css
@@ -3,19 +3,31 @@
   width: 100%;
 }
 
-.console .top-menu {
-  height: 64px;
-  background-color: dodgerblue;
-  opacity: 0.3;
-}
-
-.console .body {
-  height: calc(100% - 64px);
+.console .head-menu {
   display: flex;
+  align-items: center;
+  box-shadow: 0 3px 14px 2px rgba(0, 0, 0, .05), 0 8px 10px 1px rgba(0, 0, 0, 6%), 0 5px 5px -3px rgba(0, 0, 0, 10%);
+  z-index: 10;
 }
 
-.console .body .sidebar {
-  width: 300px;
-  background-color: yellowgreen;
-  opacity: 0.3;
+.console .head-menu .logo {
+  font-size: 20px;
+  font-weight: 400;
+  margin: 8px 24px;
+}
+
+.console .sidebar {
+  padding: 8px;
+  border-right: 1px solid #0000001a;
+}
+
+.console .main-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  color: #00000099
 }
